--- a/.github/workflows/download_artifacts.yml
+++ b/.github/workflows/download_artifacts.yml
@@ -60,7 +60,7 @@ jobs:
               return true;
             }
             
-            await downloadArtifact("MacOS", "macos-wheels");
+            await downloadArtifact("macOS", "macos-wheels");
             await downloadArtifact("Windows", "windows-wheels");
             await downloadArtifact("Manylinux", "manylinux-wheels");
 
