--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -50,9 +50,22 @@ jobs:
       - name: Build
         run: cmake --build build --config Release
 
+      - name: Fix library pathing
+        run: |
+          # Find the shared object file under the Python/TensorFrost folder.
+          # This command will locate any *.so file
+          SO_FILE=$(find Python/TensorFrost -type f -name "*.so")
+          if [ -z "$SO_FILE" ]; then
+            echo "No shared library found!"
+            exit 1
+          fi
+          echo "Found shared library: $SO_FILE"
+          # Add the rpath relative to the shared library’s loader
+          install_name_tool -add_rpath @loader_path/. "$SO_FILE"
+
       - name: Check Folder
         run: ls -R ./Python
-        
+
       - name: Build wheel
         run: |
           python -m build -w ./Python
