--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -45,4 +45,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: macos-wheels-py${{ matrix.python-version }}
-          path: Python/dist/*.whl
+          path: Python/dist/tensorfrost-*.whl
