--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -36,4 +36,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: windows-wheels-py${{ matrix.python-version }}
-        path: Python/dist/*.whl
+        path: Python/dist/tensorfrost-*.whl
