--- a/Python/pyproject.toml
+++ b/Python/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "TensorFrost"
-version = "0.7.3dev1"
+version = "0.7.3"
 description = "A static optimizing tensor compiler with a Python frontend…"
 authors = [{name = "Mykhailo Moroz", email = "michael08840884@gmail.com"}]
 requires-python = ">=3.7"
