--- a/TensorFrost/CMakeLists.txt
+++ b/TensorFrost/CMakeLists.txt
@@ -41,6 +41,10 @@ target_link_libraries(TensorFrost PRIVATE glad_gl_core_46)
 glad_add_library(glad_vulkan_12 REPRODUCIBLE LOADER API vulkan=1.2)
 target_link_libraries(TensorFrost PRIVATE glad_vulkan_12)
 
+if (MSVC)
+    target_compile_options(TensorFrost PRIVATE /wd4804 /wd4805 /wd4018)
+endif()
+
 # ---- ImGui ----
 target_include_directories(TensorFrost PRIVATE
         ${CMAKE_SOURCE_DIR}/external/imgui
